[package]
name = "solarti-name-service"
description = "Solarti Program Library Name Service"
version = "0.3.1"
repository = "https://github.com/miraland-labs/solarti-program-library"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "lcchy <lucas@bonfida.com>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>"
]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
miraland-program = ">=1.18.2"
num-traits = "0.2"
borsh = "1.3.0"
num-derive = "0.4.1"
thiserror = "1.0.50"

[dev-dependencies]
miraland-program-test = ">=1.18.2"
miraland-sdk = ">=1.18.2"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_name_service"
