[package]
name = "solarti-name-service"
description = "Solarti Program Library Name Service"
version = "0.3.1"
repository = "https://github.com/miraland-labs/solarti-program-library"
authors = [
  "Miraland Crafters <crafters@miraland.io>",
  "lcchy <lucas@bonfida.com>",
  "Miraland Labs Maintainers <maintainers@miralandlabs.com>",
]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
miraland-program = ">1.19.0"
num-traits = "0.2"
borsh = "1.3.0"
num-derive = "0.4.1"
thiserror = "1.0.50"

[dev-dependencies]
miraland-program-test = ">1.19.0"
miraland-sdk = ">1.19.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_name_service"
