[package]
name = "solarti-record"
version = "0.1.2"
description = "Solarti Program Library Record Program"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>"
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "0.10.3"
borsh-derive = "1.3.0"
num-derive = "0.4"
num-traits = "0.2"
miraland-program = "1.14.18"
thiserror = "1.0"

[dev-dependencies]
miraland-program-test = "1.14.18"
miraland-sdk = "1.14.18"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_record"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
