[package]
name = "solarti-shared-memory"
version = "2.0.8"
description = "Solarti Program Library Shared-memory"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>"
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
arrayref = "0.3.7"
miraland-program = "1.14.18"

[dev-dependencies]
miraland-program-test = "1.14.18"
miraland-sdk = "1.18.2"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_shared_memory"