[package]
name = "solarti-shared-memory"
version = "2.0.9"
description = "Solarti Program Library Shared-memory"
authors = [
  "Miraland Crafters <crafters@miraland.io>",
  "Miraland Labs Maintainers <maintainers@miralandlabs.com>",
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
arrayref = "0.3.7"
miraland-program = ">1.19.0"

[dev-dependencies]
miraland-program-test = ">1.19.0"
miraland-sdk = ">1.19.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_shared_memory"
