[package]
name = "solarti-single-pool-cli"
version = "1.0.1"
description = "Solarti Program Library Single-Validator Stake Pool Command-line Utility"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Miraland Labs Maintainers <maintainers@solanalabs.com>"
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
tokio = "1.34"
clap = { version = "3.2.23", features = ["derive"] }
console = "0.15.7"
borsh = "1.3.0"
bincode = "1.3.1"
serde = "1.0.193"
serde_derive = "1.0.103"
serde_json = "1.0.109"
serde_with = "3.4.0"
miraland-account-decoder = "1.18.2"
miraland-clap-v3-utils = "1.18.2"
miraland-cli-config = "1.18.2"
miraland-cli-output = "1.18.2"
miraland-client = "1.18.2"
miraland-logger = "1.18.2"
miraland-remote-wallet = "1.18.2"
miraland-sdk = "1.18.2"
miraland-transaction-status = "1.18.2"
miraland-vote-program = "1.18.2"
solarti-token = { version = "4.0", path="../../token/program", features = [ "no-entrypoint" ] }
solarti-token-client = { version = "0.5", path="../../token/client" }
solarti-associated-token-account = { version = "2.0", path="../../associated-token-account/program", features = [ "no-entrypoint" ] }
solarti-single-pool = { version = "1.0.0", path="../program", features = [ "no-entrypoint" ] }

[dev-dependencies]
miraland-test-validator = "1.18.2"
serial_test = "2.0.0"
test-case = "3.3"
tempfile = "3.8.1"

[[bin]]
name = "solarti-single-pool"
path = "src/main.rs"
