[package]
name = "solarti-single-pool-cli"
version = "1.0.1"
description = "Solarti Program Library Single-Validator Stake Pool Command-line Utility"
authors = [
  "Miraland Crafters <crafters@miraland.io>",
  "Miraland Labs Maintainers <maintainers@miralandlabs.com>",
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
tokio = "1.38"
clap = { version = "3.2.23", features = ["derive"] }
console = "0.15.8"
borsh = "1.5.1"
bincode = "1.3.1"
serde = "1.0.203"
serde_derive = "1.0.103"
serde_json = "1.0.117"
serde_with = "3.8.1"
miraland-account-decoder = ">1.19.0"
miraland-clap-v3-utils = ">1.19.0"
miraland-cli-config = ">1.19.0"
miraland-cli-output = ">1.19.0"
miraland-client = ">1.19.0"
miraland-logger = ">1.19.0"
miraland-remote-wallet = ">1.19.0"
miraland-sdk = ">1.19.0"
miraland-transaction-status = ">1.19.0"
miraland-vote-program = ">1.19.0"
solarti-token = { version = "4.2.0", path = "../../token/program", features = [
  "no-entrypoint",
] }
solarti-token-client = { version = "0.6.0", path = "../../token/client" }
solarti-associated-token-account = { version = "2.2.0", path = "../../associated-token-account/program", features = [
  "no-entrypoint",
] }
solarti-single-pool = { version = "1.0.0", path = "../program", features = [
  "no-entrypoint",
] }

[dev-dependencies]
miraland-test-validator = ">1.19.0"
serial_test = "3.1.1"
test-case = "3.3"
tempfile = "3.10.1"

[[bin]]
name = "solarti-single-pool"
path = "src/main.rs"
