[package]
name = "solarti-single-pool"
version = "1.0.1"
description = "Solarti Program Library Single-Validator Stake Pool"
authors = [
  "Miraland Crafters <crafters@miraland.io>",
  "Miraland Labs Maintainers <maintainers@miralandlabs.com>",
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.7"
borsh = "1.5.1"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.2"
miraland-program = ">1.19.0"
miraland-security-txt = "1.1.1"
solarti-token = { version = "4.2.0", path = "../../token/program", features = [
  "no-entrypoint",
] }
solarti-associated-token-account = { version = "2.2.0", path = "../../associated-token-account/program", features = [
  "no-entrypoint",
] }
thiserror = "1.0"

[dev-dependencies]
miraland-program-test = ">1.19.0"
miraland-sdk = ">1.19.0"
miraland-vote-program = ">1.19.0"
test-case = "3.3"
bincode = "1.3.1"
rand = "0.8.5"
approx = "0.5.1"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_single_pool"
