[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SOLARTI-Stake-Pool Command-line Utility"
edition = "2021"
homepage = "https://spl.solana.com/stake-pool"
license = "Apache-2.0"
name = "solarti-stake-pool-cli"
repository = "https://github.com/miraland-labs/solarti-program-library"
version = "0.7.1"

[dependencies]
borsh = "0.9"
clap = "2.33.3"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
miraland-account-decoder = "=1.14.17-rc4"
miraland-clap-utils = "=1.14.17-rc4"
miraland-cli-config = "=1.14.17-rc4"
miraland-cli-output = "=1.14.17-rc4"
miraland-client = "=1.14.17-rc4"
miraland-logger = "=1.14.17-rc4"
miraland-program = "=1.14.17-rc4"
miraland-remote-wallet = "=1.14.17-rc4"
miraland-sdk = "=1.14.17-rc4"
solarti-associated-token-account = { version = "1.1", path="../../associated-token-account/program", features = [ "no-entrypoint" ] }
solarti-stake-pool = { version = "0.7", path="../program", features = [ "no-entrypoint" ] }
solarti-token = { version = "3.5", path="../../token/program", features = [ "no-entrypoint" ]  }
bs58 = "0.4.0"
bincode = "1.3.1"

[[bin]]
name = "solarti-stake-pool"
path = "src/main.rs"
