[package]
authors = [
  "Miraland Crafters <crafters@miraland.io>",
  "Miraland Labs Maintainers <maintainers@miralandlabs.com>",
]
description = "SOLARTI-Stake-Pool Command-line Utility"
edition = "2021"
homepage = "https://spl.miraland.io/stake-pool"
license = "Apache-2.0"
name = "solarti-stake-pool-cli"
repository = "https://github.com/miraland-labs/solarti-program-library"
version = "0.7.3"

[dependencies]
borsh = "1.3.0"
clap = "2.33.3"
serde = "1.0.193"
serde_derive = "1.0.130"
serde_json = "1.0.108"
miraland-account-decoder = ">1.19.0"
miraland-clap-utils = ">1.19.0"
miraland-cli-config = ">1.19.0"
miraland-cli-output = ">1.19.0"
miraland-client = ">1.19.0"
miraland-logger = ">1.19.0"
miraland-program = ">1.19.0"
miraland-remote-wallet = ">1.19.0"
miraland-sdk = ">1.19.0"
solarti-associated-token-account = { version = "2.2.0", path = "../../associated-token-account/program", features = [
  "no-entrypoint",
] }
solarti-stake-pool = { version = "0.7", path = "../program", features = [
  "no-entrypoint",
] }
solarti-token = { version = "4.2.0", path = "../../token/program", features = [
  "no-entrypoint",
] }
bs58 = "0.4.0"
bincode = "1.3.1"

[[bin]]
name = "solarti-stake-pool"
path = "src/main.rs"
