[package]
name = "solarti-stake-pool"
version = "0.7.1"
description = "Solarti Program Library Stake Pool"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.6"
borsh = "0.9"
miraplex-token-metadata =  { version = "1.7.0-beta", features = [ "no-entrypoint" ] }
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.9"
serde = "1.0.130"
serde_derive = "1.0.103"
miraland-program = "=1.14.17-rc4"
solarti-math = { version = "0.1", path = "../../libraries/math", features = [ "no-entrypoint" ] }
solarti-token-2022 = { version = "0.6", path = "../../token/program-2022", features = [ "no-entrypoint" ] }
thiserror = "1.0"
bincode = "1.3.1"

[dev-dependencies]
proptest = "1.0"
miraland-program-test = "=1.14.17-rc4"
miraland-sdk = "=1.14.17-rc4"
miraland-vote-program = "=1.14.17-rc4"
solarti-token = { version = "3.5", path = "../../token/program", features = [ "no-entrypoint" ] }
test-case = "2.2"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_stake_pool"
