[package]
name = "solarti-stake-pool"
version = "0.7.2"
description = "Solarti Program Library Stake Pool"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Miraland Labs Maintainers <maintainers@solanalabs.com>"
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.7"
borsh = "1.3.0"
bytemuck = "1.13"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.1"
serde = "1.0.197"
serde_derive = "1.0.103"
miraland-program = "1.18.2"
solarti-math = { version = "0.2", path = "../../libraries/math", features = [ "no-entrypoint" ] }
solarti-pod = { version = "0.1", path = "../../libraries/pod", features = ["borsh"] }
solarti-token-2022 = { version = "1.0", path = "../../token/program-2022", features = [ "no-entrypoint" ] }
thiserror = "1.0"
bincode = "1.3.1"

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1.4"
miraland-program-test = "1.18.2"
miraland-sdk = "1.18.2"
miraland-vote-program = "1.18.2"
solarti-token = { version = "4.0", path = "../../token/program", features = [ "no-entrypoint" ] }
test-case = "3.3"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_stake_pool"
