[package]
name = "solarti-stateless-asks"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "0.10.3"
miraland-program = "=1.14.18"
solarti-token = { version = "3.5", path = "../../token/program", features = ["no-entrypoint"] }
solarti-associated-token-account = {version = "1.1", path = "../../associated-token-account/program", features = ["no-entrypoint"]}
miraplex-token-metadata = { version = "1.7.4", features = ["no-entrypoint"] }
thiserror = "1.0"

[dev-dependencies]
miraland-program-test = "=1.14.18"
miraland-sdk = "=1.14.18"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_stateless_asks"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
