[package]
name = "solarti-stateless-asks"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "1.2.1"
miraland-program = "1.14.18"
solarti-associated-token-account = {version = "2.0", path = "../../associated-token-account/program", features = ["no-entrypoint"]}
solarti-token = { version = "4.0", path = "../../token/program", features = ["no-entrypoint"] }
thiserror = "1.0"

[dev-dependencies]
miraland-program-test = "1.14.18"
miraland-sdk = "1.14.18"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_stateless_asks"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
