[package]
name = "solarti-stateless-asks"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "1.3.0"
miraland-program = ">=1.18.2, <1.19.0"
solarti-associated-token-account = { version = "2.0", path = "../../associated-token-account/program", features = [
    "no-entrypoint",
] }
solarti-token = { version = "4.0", path = "../../token/program", features = [
    "no-entrypoint",
] }
thiserror = "1.0"

[dev-dependencies]
miraland-program-test = ">=1.18.2, <1.19.0"
miraland-sdk = ">=1.18.2, <1.19.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_stateless_asks"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
